# yagmail

./: .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  deploy.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  yagmail.py
.github/workflows/: tests.yml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  setup.rst  usage.rst
tests/: all_test.py  domainkey-dns.txt  privkey.pem  runTests.py  run_tests.py  test_async.py  test_dkim.py
yagmail/: __init__.py  __main__.py  compat.py  dkim.py  error.py  example.html  exceptions.py  headers.py  image.py  log.py  message.py  oauth2.py  password.py  sender.py  utils.py  validate.py  yagmail.py
yagmail/async_core/: __init__.py  aio.py
